force-app/main/default/objects/ObjectifsVendeur__c/ObjectifsVendeur__c.object-meta.xml
<CustomObject>
    <description>CRM-540 : Objectifs des vendeurs par semaine</description>
    <label>Objectif vendeur</label>
    <nameField>
        <displayFormat>OV/{YYYY}/{00000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Objectifs vendeur</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>