force-app/main/default/objects/ObjectifsVendeur__c/fields/anneeObjectif__c.field-meta.xml
<CustomField>
    <fullName>anneeObjectif__c</fullName>
    <defaultValue>YEAR(TODAY())</defaultValue>
    <description>CRM-540 : Année sélectionnée par l’utilisateur</description>
    <label>Année des objectifs</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>