force-app/main/default/objects/ObjectifsVendeur__c/fields/chiffreAffaireVenduMois__c.field-meta.xml
<CustomField>
    <fullName>chiffreAffaireVenduMois__c</fullName>
    <description>CRM-540 : Objectif du chiffre d’affaire vendu pour le mois</description>
    <formula>chiffreAffaireVenduS1__c + chiffreAffaireVenduS2__c + chiffreAffaireVenduS3__c + chiffreAffaireVenduS4__c + chiffreAffaireVenduS5__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CA (K€) vendu (Mois)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>