force-app/main/default/objects/ObjectifsVendeur__c/fields/chiffreAffaireVenduS3__c.field-meta.xml
<CustomField>
    <fullName>chiffreAffaireVenduS3__c</fullName>
    <defaultValue>0</defaultValue>
    <description>CRM-540 : Objectif du chiffre d’affaire vendu pour la semaine 3</description>
    <label>CA (K€) vendu (S3)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>