force-app/main/default/objects/ObjectifsVendeur__c/fields/moisObjectif__c.field-meta.xml
<CustomField>
    <fullName>moisObjectif__c</fullName>
    <description>CRM-540 : Mois sélectionné par l’utilisateur</description>
    <label>Mois des objectifs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Janvier</fullName>
                <default>true</default>
                <label>Janvier</label>
            </value>
            <value>
                <fullName>Février</fullName>
            </value>
            <value>
                <fullName>Mars</fullName>
            </value>
            <value>
                <fullName>Avril</fullName>
            </value>
            <value>
                <fullName>Mai</fullName>
            </value>
            <value>
                <fullName>Juin</fullName>
            </value>
            <value>
                <fullName>Juillet</fullName>
            </value>
            <value>
                <fullName>Août</fullName>
            </value>
            <value>
                <fullName>Septembre</fullName>
            </value>
            <value>
                <fullName>Octobre</fullName>
            </value>
            <value>
                <fullName>Novembre</fullName>
            </value>
            <value>
                <fullName>Décembre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>