force-app/main/default/objects/ObjectifsVendeur__c/fields/nbContactsActifsS1__c.field-meta.xml
<CustomField>
    <fullName>nbContactsActifsS1__c</fullName>
    <defaultValue>0</defaultValue>
    <description>CRM-540 : Objectif de comptes actifs pour la semaine 1</description>
    <label>Nombre de contacts actifs (S1)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>