force-app/main/default/objects/ObjectifsVendeur__c/fields/nbContactsPassifsS2__c.field-meta.xml
<CustomField>
    <fullName>nbContactsPassifsS2__c</fullName>
    <defaultValue>0</defaultValue>
    <description>CRM-540 : Objectif de comptes passifs pour la semaine 2</description>
    <label>Nombre de contacts passifs (S2)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>