force-app/main/default/objects/ObjectifsVendeur__c/fields/nbVentesS1__c.field-meta.xml
<CustomField>
    <fullName>nbVentesS1__c</fullName>
    <defaultValue>0</defaultValue>
    <description>CRM-540 : Objectif de ventes pour la semaine 1</description>
    <label>Nombre de ventes (S1)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>