force-app/main/default/objects/ObjectifsVendeur__c/fields/nbVentesS2__c.field-meta.xml
<CustomField>
    <fullName>nbVentesS2__c</fullName>
    <defaultValue>0</defaultValue>
    <description>CRM-540 : Objectif de ventes pour la semaine 2</description>
    <label>Nombre de ventes (S2)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>