force-app/main/default/objects/ObjectifsVendeur__c/fields/vendeur__c.field-meta.xml
<CustomField>
    <fullName>vendeur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CRM-540 : Vendeur pour les objectifs</description>
    <label>Vendeur</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ObjectifsVendeur</relationshipName>
    <type>Lookup</type>
</CustomField>