force-app/main/default/objects/ObjectifsVendeur__c/validationRules/VR001_K2_Objectif_CA_S1.validationRule-meta.xml
<ValidationRule>
    <fullName>VR001_K2_Objectif_CA_S1</fullName>
    <active>true</active>
    <description>Chiffre d&apos;affaire semaine 1 toujours positif</description>
    <errorConditionFormula>chiffreAffaireVenduS1__c &lt; 0</errorConditionFormula>
    <errorDisplayField>chiffreAffaireVenduS1__c</errorDisplayField>
    <errorMessage>Vous devez saisir une valeur positive !</errorMessage>
</ValidationRule>