force-app/main/default/objects/ObjectifsVendeur__c/validationRules/VR001_K2_Objectif_CA_S3.validationRule-meta.xml
<ValidationRule>
    <fullName>VR001_K2_Objectif_CA_S3</fullName>
    <active>true</active>
    <description>Chiffre d&apos;affaire semaine 3 toujours positif</description>
    <errorConditionFormula>chiffreAffaireVenduS3__c &lt; 0</errorConditionFormula>
    <errorDisplayField>chiffreAffaireVenduS3__c</errorDisplayField>
    <errorMessage>Vous devez saisir une valeur positive !</errorMessage>
</ValidationRule>