force-app/main/default/objects/ObjectifsVendeur__c/validationRules/VR001_K2_Objectif_CA_S4.validationRule-meta.xml
<ValidationRule>
    <fullName>VR001_K2_Objectif_CA_S4</fullName>
    <active>true</active>
    <description>Chiffre d&apos;affaire semaine 4 toujours positif</description>
    <errorConditionFormula>chiffreAffaireVenduS4__c &lt; 0</errorConditionFormula>
    <errorDisplayField>chiffreAffaireVenduS4__c</errorDisplayField>
    <errorMessage>Vous devez saisir une valeur positive !</errorMessage>
</ValidationRule>