force-app/main/default/objects/ObjectifsVendeur__c/validationRules/VR001_K2_Objectif_CA_S5.validationRule-meta.xml
<ValidationRule>
    <fullName>VR001_K2_Objectif_CA_S5</fullName>
    <active>true</active>
    <description>Chiffre d&apos;affaire semaine 5 toujours positif</description>
    <errorConditionFormula>chiffreAffaireVenduS5__c &lt; 0</errorConditionFormula>
    <errorDisplayField>chiffreAffaireVenduS5__c</errorDisplayField>
    <errorMessage>Vous devez saisir une valeur positive !</errorMessage>
</ValidationRule>