force-app/main/default/objects/ObjectifsVendeur__c/validationRules/VR001_K2_Objectif_ContActif_S1.validationRule-meta.xml
<ValidationRule>
    <fullName>VR001_K2_Objectif_ContActif_S1</fullName>
    <active>true</active>
    <description>Contact actif semaine 1 toujours positif</description>
    <errorConditionFormula>nbContactsActifsS1__c &lt; 0</errorConditionFormula>
    <errorDisplayField>nbContactsActifsS1__c</errorDisplayField>
    <errorMessage>Vous devez saisir une valeur positive !</errorMessage>
</ValidationRule>