force-app/main/default/objects/ObjectifsVendeur__c/validationRules/VR001_K2_Objectif_ContActif_S3.validationRule-meta.xml
<ValidationRule>
    <fullName>VR001_K2_Objectif_ContActif_S3</fullName>
    <active>true</active>
    <description>Contact actif semaine 3 toujours positif</description>
    <errorConditionFormula>nbContactsActifsS3__c &lt; 0</errorConditionFormula>
    <errorDisplayField>nbContactsActifsS3__c</errorDisplayField>
    <errorMessage>Vous devez saisir une valeur positive !</errorMessage>
</ValidationRule>