force-app/main/default/objects/ObjectifsVendeur__c/validationRules/VR001_K2_Objectif_ContPassif_S2.validationRule-meta.xml
<ValidationRule>
    <fullName>VR001_K2_Objectif_ContPassif_S2</fullName>
    <active>true</active>
    <description>Contact passif semaine 2 toujours positif</description>
    <errorConditionFormula>nbContactsPassifsS2__c &lt; 0</errorConditionFormula>
    <errorDisplayField>nbContactsPassifsS2__c</errorDisplayField>
    <errorMessage>Vous devez saisir une valeur positive !</errorMessage>
</ValidationRule>