force-app/main/default/objects/ObjectifsVendeur__c/validationRules/VR001_K2_Objectif_ContPassif_S4.validationRule-meta.xml
<ValidationRule>
    <fullName>VR001_K2_Objectif_ContPassif_S4</fullName>
    <active>true</active>
    <description>Contact passif semaine 4 toujours positif</description>
    <errorConditionFormula>nbContactsPassifsS4__c &lt; 0</errorConditionFormula>
    <errorDisplayField>nbContactsPassifsS4__c</errorDisplayField>
    <errorMessage>Vous devez saisir une valeur positive !</errorMessage>
</ValidationRule>