force-app/main/default/objects/ObjectifsVendeur__c/validationRules/VR001_K2_Objectif_ContPassif_S5.validationRule-meta.xml
<ValidationRule>
    <fullName>VR001_K2_Objectif_ContPassif_S5</fullName>
    <active>true</active>
    <description>Contact passif semaine 5 toujours positif</description>
    <errorConditionFormula>nbContactsPassifsS5__c &lt; 0</errorConditionFormula>
    <errorDisplayField>nbContactsPassifsS5__c</errorDisplayField>
    <errorMessage>Vous devez saisir une valeur positive !</errorMessage>
</ValidationRule>