force-app/main/default/objects/ObjectifsVendeur__c/validationRules/VR001_K2_Objectif_Vendeur.validationRule-meta.xml
<ValidationRule>
    <fullName>VR001_K2_Objectif_Vendeur</fullName>
    <active>true</active>
    <description>Le vendeur est obligatoire</description>
    <errorConditionFormula>ISBLANK( vendeur__c )</errorConditionFormula>
    <errorDisplayField>vendeur__c</errorDisplayField>
    <errorMessage>Le vendeur est obligatoire</errorMessage>
</ValidationRule>