force-app/main/default/objects/ObjectifsVendeur__c/validationRules/VR001_K2_Objectif_Vente_S1.validationRule-meta.xml
<ValidationRule>
    <fullName>VR001_K2_Objectif_Vente_S1</fullName>
    <active>true</active>
    <description>Nombre de vente semaine 1 toujours positif</description>
    <errorConditionFormula>nbVentesS1__c &lt; 0</errorConditionFormula>
    <errorDisplayField>nbVentesS1__c</errorDisplayField>
    <errorMessage>Vous devez saisir une valeur positive !</errorMessage>
</ValidationRule>