force-app/main/default/objects/ObjectifsVendeur__c/validationRules/VR001_K2_Objectif_Vente_S2.validationRule-meta.xml
<ValidationRule>
    <fullName>VR001_K2_Objectif_Vente_S2</fullName>
    <active>true</active>
    <description>Nombre de vente semaine 2 toujours positif</description>
    <errorConditionFormula>nbVentesS2__c &lt; 0</errorConditionFormula>
    <errorDisplayField>nbVentesS2__c</errorDisplayField>
    <errorMessage>Vous devez saisir une valeur positive !</errorMessage>
</ValidationRule>