force-app/main/default/objects/ObjectifsVendeur__c/validationRules/VR001_K2_Objectif_Vente_S3.validationRule-meta.xml
<ValidationRule>
    <fullName>VR001_K2_Objectif_Vente_S3</fullName>
    <active>true</active>
    <description>Nombre de vente semaine 3 toujours positif</description>
    <errorConditionFormula>nbVentesS3__c &lt; 0</errorConditionFormula>
    <errorDisplayField>nbVentesS3__c</errorDisplayField>
    <errorMessage>Vous devez saisir une valeur positive !</errorMessage>
</ValidationRule>