force-app/main/default/objects/ObjectifsVendeur__c/validationRules/VR001_K2_Objectif_Vente_S4.validationRule-meta.xml
<ValidationRule>
    <fullName>VR001_K2_Objectif_Vente_S4</fullName>
    <active>true</active>
    <description>Nombre de vente semaine 4 toujours positif</description>
    <errorConditionFormula>nbVentesS4__c &lt; 0</errorConditionFormula>
    <errorDisplayField>nbVentesS4__c</errorDisplayField>
    <errorMessage>Vous devez saisir une valeur positive !</errorMessage>
</ValidationRule>