force-app/main/default/objects/ObjectifsVendeur__c/validationRules/VR001_K2_Objectif_Vente_S5.validationRule-meta.xml
<ValidationRule>
    <fullName>VR001_K2_Objectif_Vente_S5</fullName>
    <active>true</active>
    <description>Nombre de vente semaine 5 toujours positif</description>
    <errorConditionFormula>nbVentesS5__c &lt; 0</errorConditionFormula>
    <errorDisplayField>nbVentesS5__c</errorDisplayField>
    <errorMessage>Vous devez saisir une valeur positive !</errorMessage>
</ValidationRule>