force-app/main/default/objects/ObjectifsVendeur__c/listViews/Tout.listView-meta.xml
<ListView>
    <fullName>Tout</fullName>
    <columns>NAME</columns>
    <columns>vendeur__c</columns>
    <columns>anneeObjectif__c</columns>
    <columns>moisObjectif__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>